--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@faker-js/faker": "^9.2.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-compression": "^1.0.2"
   }
 }
